--- a/ChebyshevsPolynoms/Cargo.toml
+++ b/ChebyshevsPolynoms/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-nalgebra = "0.32"
-ndarray = "0.15"
+nalgebra = "0.33.2"
+ndarray = "0.16.1"
 ndarray-linalg = { version = "0.16", features = ["openblas"] }
-integration = "0.1"
-quad = "0.2"
-ode = "0.3"
+integrate = "0.1.7"
+quad-rs = "0.2"
+ode = "0.1.2"
