--- a/ChebyshevsPolynoms/Cargo.toml
+++ b/ChebyshevsPolynoms/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 nalgebra = "0.33.2"
 ndarray = "0.16.1"
-ndarray-linalg = { version = "0.16", features = ["openblas"] }
+ndarray-linalg = { version = "0.17.0", features = ["openblas"] }
 integrate = "0.1.7"
-quad-rs = "0.2"
+quad = "0.1.2"
 ode = "0.1.2"
